* Fix dark mode input text color and polishing

--- a/public_html/includes/templates/default.admin/less/framework/cards.less
+++ b/public_html/includes/templates/default.admin/less/framework/cards.less
@@ -6,7 +6,7 @@
   background-color: var(--card-background-color);
   //border: 1px solid var(--card-border-color);
   border-radius: var(--border-radius);
-  box-shadow: 0 1px .25rem rgba(0, 0, 0, .15);
+  box-shadow: 0 1px 0.5rem rgba(0, 0, 0, .05);
   color: var(--card-text-color);
 
   .card-header, .card-filter, .card-body, .card-footer,
