--- a/public_html/includes/templates/default.admin/less/variables.less
+++ b/public_html/includes/templates/default.admin/less/variables.less
@@ -31,7 +31,7 @@
 
   --page-background-color: #f5f6f7;
 
-  --sidebar-background-color: #e6e8ec;
+  --sidebar-background-color: #e6e9ed;
   --sidebar-border-color: var(--default-border-color);
   --sidebar-text-color: #333;
   --sidebar-width: 18em;
@@ -94,8 +94,8 @@
   --pagination-text-color-hover: var(--default-text-color);
   --pagination-text-color-active: var(--default-text-color);
 
-  --button-default-background-color: #f3f4f7;
-  --button-default-background-color-hover: #eeeff3;
+  --button-default-background-color: #efefef;
+  --button-default-background-color-hover: #e1e2e5;
   --button-default-background-color-active: #dfdfe2;
   --button-default-border-color: #e0e0e0;
   --button-default-text-color: #222;
@@ -112,7 +112,7 @@
   --button-success-border-color: rgba(0,0,0,0.1);
   --button-success-text-color: #fff;
 
-  --input-background-color: #f9f9fb;
+  --input-background-color: #f3f3f3;
   --input-addon-background-color: #f3f4f7;
   --input-code-background-color: #313b50;
   --input-code-text-color: #fff;
@@ -212,7 +212,7 @@ html.dark-mode {
   --input-border-color: #31384a;
   --input-border-color-focus: #555e74;
   --input-addon-background-color: #3d485e;
-  --input-text-color: #000;
+  --input-text-color: #acb6c2;
 
   --copyright-text-color: #acb6c2;
 
